doc some things